demo-core/main/default/objects/Demo_Task__c/Demo_Task__c.object-meta.xml
<CustomObject>
    <label>Demo Task</label>
    <nameField>
        <label>Demo Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>