demo-core/main/default/objects/Demo_Task__c/fields/Demo_AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>Demo_AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Demo_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>