demo-core/main/default/objects/Demo_Task__c/fields/Demo_DueDate__c.field-meta.xml
<CustomField>
    <fullName>Demo_DueDate__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>