demo-core/main/default/objects/Demo_Task__c/fields/Demo_RelatedProject__c.field-meta.xml
<CustomField>
    <fullName>Demo_RelatedProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Project</label>
    <referenceTo>Demo_Project__c</referenceTo>
    <relationshipLabel>Demo Tasks</relationshipLabel>
    <relationshipName>Demo_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>